--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "typescript": "^5.2.2",
